Bug 253875 - REGRESSION(261586@main): The assertion is randomly failing
Summary: REGRESSION(261586@main): The assertion is randomly failing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks: 253765
  Show dependency treegraph
 
Reported: 2023-03-14 00:36 PDT by WebKit Commit Bot
Modified: 2023-03-14 09:21 PDT (History)
4 users (show)

See Also:


Attachments
REVERT of 261586@main (7.36 KB, patch)
2023-03-14 00:36 PDT, WebKit Commit Bot
ews-feeder: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description WebKit Commit Bot 2023-03-14 00:36:03 PDT
https://commits.webkit.org/261586@main introduced a regression:
The assertion is randomly failing

This is an automatic bug report generated by webkitbot. If this bug
report was created because of a flaky test, please file a bug for the flaky
test (if we don't already have one on file) and dup this bug against that bug
so that we can track how often these flaky tests fail.
Comment 1 WebKit Commit Bot 2023-03-14 00:36:12 PDT
Created attachment 465429 [details]
REVERT of 261586@main

Any committer can land this patch automatically by marking it commit-queue+.  The commit-queue will build and test the patch before landing to ensure that the revert will be successful.  This process takes approximately 15 minutes.

If you would like to land the revert faster, you can use the following command:

  webkit-patch land-attachment ATTACHMENT_ID

where ATTACHMENT_ID is the ID of this attachment.
Comment 2 EWS 2023-03-14 00:48:38 PDT
commit-queue failed to commit attachment 465429 [details] to WebKit repository. To retry, please set cq+ flag again.
Comment 3 EWS 2023-03-14 05:30:01 PDT
commit-queue failed to commit attachment 465429 [details] to WebKit repository. To retry, please set cq+ flag again.
Comment 4 EWS 2023-03-14 08:53:01 PDT
commit-queue failed to commit attachment 465429 [details] to WebKit repository. To retry, please set cq+ flag again.
Comment 5 Ryan Haddad 2023-03-14 09:17:10 PDT
Since cq failed to land this, Chris is working on a real fix
Comment 6 Radar WebKit Bug Importer 2023-03-14 09:17:11 PDT
<rdar://problem/106705387>
Comment 7 Chris Dumez 2023-03-14 09:19:24 PDT
Re-opening for pull request https://github.com/WebKit/WebKit/pull/11499
Comment 8 EWS 2023-03-14 09:21:56 PDT
Committed 261634@main (91848d64a7b3): <https://commits.webkit.org/261634@main>

Reviewed commits have been landed. Closing PR #11499 and removing active labels.